# heurist-api

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.html  sitemap.xml  vscode-settings.example.json
.github/workflows/: badge-update.yml  pylint.yml  pypi-release.yml  python-package.yml  release.yml
demos/: pandas_dataframe.ipynb
development/code_of_conduct/: index.html
development/contributing/: index.html
development/coverage/: index.html
development/publishing/: index.html
docs/: AdvancedUsage.md  ContributingFile.md  PublishingVersions.md  README.md  index.md  legal.md
docs/development/: contributing.md  coverage.md  publishing.md
docs/reference/: db_parser.md
docs/usage/: faq.md  index.md  module.md  recipes.md  troubleshooting.md
examples/: __init__.py  fuzzydate_record.json  records.json
examples/data_types/: enum.py  enum_plural.py  fuzzy_date.py  media_url.py  multi_line.py  numeric.py  point.py  polygon.py  record_pointer.py  simple_date.py  single_line.py
examples/date/: schema.py  single.py
examples/enum/: repeated.py  single.py
examples/file/: single.py
examples/float/: single.py
examples/freetext/: single.py
examples/geo/: single.py
examples/resource/: repeated.py  single.py
heurist/: __init__.py  __main__.py
heurist/api/: client.py  connection.py  constants.py  credentials.py  exceptions.py  param_manager.py  session.py  url_builder.py  utils.py
heurist/cli/: __main__.py  load.py  records.py  schema.py
heurist/cli_commands/: __init__.py  doc.py  dump.py  records.py
heurist/client/: __init__.py  client.py  constants.py  session.py  url_builder.py
heurist/commands/: doc.py  dump.py
heurist/converters/: date_handler.py  detail_converter.py  dynamic_pydantic_data_field.py  dynamic_record_type_modeler.py  exceptions.py  model_validation_prep.py  prepare_records.py  record_modeler.py  type_handler.py
heurist/database/: __init__.py  basedb.py  database.py
heurist/doc/: __init__.py
heurist/models/: DetailTypes.py  RecStructure.py  RecTypeGroups.py  RecTypes.py  Terms.py  __init__.py  date.py  dty.py  hml_structure.py  rst.py  rtg.py  utils.py
heurist/schema/: __init__.py  rel_to_dict.py
heurist/sql/: __init__.py  joinRecordTypeIDNameByGroupType.sql  joinRecordTypeMetadata.sql
heurist/validators/: detail_validator.py  parse_heurist_date.py  record_validator.py
heurist/workflows/: etl.py
how-to-guides/: index.html
legal/: index.html
reference/SUMMARY/: index.html
reference/db_parser/: index.html
scripts/: gen_badges.sh
search/: search_index.json
src/: __init__.py  __main__.py  __version__.py
src/api_client/: __init__.py  client.py  client_wrapper.py  exceptions.py  session.py  url_builder.py
src/cli_commands/: __init__.py  doc.py  dump.py  records.py
src/data_models/: DetailTypes.py  RecStructure.py  RecTypeGroups.py  RecTypes.py  Terms.py  __init__.py  dty.py  hml_structure.py  rty.py
src/database/: __init__.py  database.py  skeleton.py
src/heurist_api/: __init__.py  __version__.py  cli.py  client.py  constants.py  db_structure_parser.py  dump_records.py  record_parser.py  record_results.py  relational_tables.py  relationship_marker_parser.py  sql_functions.py  url_builder.py  utils.py
src/heurist_transformers/: detail_converter.py  detail_modeler.py  dynamic_pydantic_data_field.py  dynamic_record_type_modeler.py  model_record_detail.py  prepare_records.py  record_modeler.py  type_handler.py
src/mock_data/: fuzzydate_record.json  records.json
src/schema_doc_tools/: __init__.py
src/sql_models/: __init__.py  record_details.py  selectRecSchema.sql  sql_safety.py
tests/: __init__.py  client_test.py  database_test.py  mock.html  modeling_test.py  skeleton_test.py  test_client.py  test_database.py  test_db_structure.py  test_doc.py  test_doc_json.py  test_duckbase.py  test_modeling.py  test_paths.py  test_record.py  test_record_parser.py  test_relational_tables.py  test_schemas.py  transform_detail_test.py
tests/e2e/: download_test.py  dump_test.py  schema_test.py
tests/heurist_transformers/: _details.py  (+5 more)
tutorials/: index.html
usage/: index.html
(+220 files in other folders)
