[project]

name = "heurist"

description = "ETL data pipeline tool for Heurist database."

keywords = [ "duckdb", "etl" ]

authors = [
    {name = "Kelly Christensen", email = "kelly.christensen@chartes.psl.eu"}
]

version = "0.0.1a11"

dynamic = [ "readme" ]

license = { file = "LICENSE" }

requires-python = ">=3.10"

dependencies = [
    "annotated-types (>=0.7.0,<0.8.0)",
    "click (>=8.1.8,<9.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.22.0,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-xml (>=2.14.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]


[project.urls]
Homepage = "https://lostma-erc.github.io/heurist-etl-pipeline/"
Documentation = "https://lostma-erc.github.io/heurist-etl-pipeline/"
Repository = "https://github.com/LostMa-ERC/heurist-etl-pipeline"
Issues = "https://github.com/LostMa-ERC/heurist-etl-pipeline/issues"


[project.scripts]
heurist = "heurist.cli.__main__:cli"


[tool.poetry]
readme = ["README.md"]
package-mode = true
packages = [
    { include = "heurist", from = "." }
]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
flake8 = "^7.1.2"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.16.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
coverage = "^7.6.12"
genbadge = {extras = ["all"], version = "^1.1.1"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
