[project]
name = "heurist"
version = "0.1.0"
description = "ETL data pipeline tool for Heurist database."
keywords = [ "duckdb", "etl" ]
dynamic = [ "readme" ]
license = { file = "LICENSE" }
authors = [
    {name = "Kelly Christensen", email = "kelly.christensen@chartes.psl.eu"}
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.0",
    "duckdb>=1.2.2",
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "pydantic-xml>=2.16.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "tenacity>=9.1.2",
]

[project.urls]
Homepage = "https://lostma-erc.github.io/heurist-etl-pipeline/"
Documentation = "https://lostma-erc.github.io/heurist-etl-pipeline/"
Repository = "https://github.com/LostMa-ERC/heurist-etl-pipeline"
Issues = "https://github.com/LostMa-ERC/heurist-etl-pipeline/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["src/heurist", "src/mock_data"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[project.scripts]
heurist = "heurist.cli.__main__:cli"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
publish-url = "https://test.pypi.org/legacy/"